# mcp_course

./: .gitignore  .gitmodules  .pre-commit-config.yaml  hn.txt  pyproject.toml
src/unit1/gradio_mcp_server/: app.py
src/unit1/mcp_server/: server.py
src/unit2/mcp_client/: README.md  app.py  requirements.txt  tiny_agent.json
src/unit2/mcp_server/: README.md  app.py  requirements.txt
src/unit3/: server.py  test_server.py  validate_starter.py
