[project]
name = "mcp-course"
version = "0.1.0"
description = ""
authors = [
    {name = "niv vaknin",email = "39972445+vaknin34@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.0"
mypy = "^1.16.1"
pre-commit = "^4.2.0"

[tool.ruff]
line-length = 88
target-version = "py311"  # Python version to target
# choose your rule sets:
select = ["E", "F", "I", "UP"]      # E:pycodestyle, F:pyflakes, I:isort, UP:simplifiers
exclude = ["build", ".venv"]

[tool.ruff.format]                  # ruff-format settings
preview = true                      # enables Ruff’s 2024+ formatter style

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
ignore_missing_imports = true