[project]
name = "mcp-course"
version = "0.1.0"
description = ""
authors = [
    {name = "niv vaknin",email = "39972445+vaknin34@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub[mcp] (>=0.32.0)",
    "gradio[mcp] (>=5.34.2,<6.0.0)",
    "textblob (>=0.19.0,<0.20.0)",
    "fastmcp (<2.0.0)",
    "mcp (==1.9.3)",
    "smolagents[mcp] (>=1.19.0,<2.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-asyncio (>=1.0.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.0"
mypy = "^1.16.1"
pre-commit = "^4.2.0"

[tool.ruff]
line-length = 120  # maximum line length
target-version = "py311"  # Python version to target
# choose your rule sets:
exclude = ["build", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]      # E:pycodestyle, F:pyflakes, I:isort, UP:simplifiers

[tool.ruff.format]                  # ruff-format settings
preview = true                      # enables Ruff’s 2024+ formatter style

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
ignore_missing_imports = true